# copilot-orchestra

./: .env.example  .gitignore  pyproject.toml  requirements.txt
plans/: enterprise-chatbot-framework-plan.md
src/: __init__.py
src/analysis/: __init__.py  code_analyzer.py
src/config/: settings.py
src/embeddings/: __init__.py  embedder.py
src/ingestion/: __init__.py  base.py  code_source.py  confluence_source.py  file_source.py  parsers.py
src/mapping/: __init__.py  semantic_mapper.py
src/models/: __init__.py  code_entity.py  document.py  search_result.py
src/retrieval/: __init__.py  ranker.py  retriever.py
src/storage/: __init__.py  mapping_store.py  vector_store.py
tests/: __init__.py  test_config.py
tests/analysis/: test_code_analyzer.py
tests/embeddings/: test_embedder.py
tests/ingestion/: test_code_source.py  test_confluence_source.py  test_file_source.py  test_parsers.py
tests/mapping/: test_semantic_mapper.py
tests/models/: test_code_entity.py  test_search_result.py
tests/retrieval/: test_ranker.py  test_retriever.py
tests/storage/: test_mapping_store.py  test_vector_store.py
